@@ -1560,9 +1560,12 @@ void qt_hypertext( int type, const char *text )
 #ifdef EAM_BOXED_TEXT
 void qt_boxed_text(unsigned int x, unsigned int y, int option)
 {
-	if (option == TEXTBOX_MARGINS)
-	    qt->out << GETextBox << QPointF((double)x/(100*qt_oversamplingF), (double)y/(100*qt_oversamplingF)) << option;
-	else
+	if (option == TEXTBOX_MARGINS) {
+	    // slightly largin y margin to allow for descenders 
+	    double xmargin = (double)x/(100*qt_oversamplingF);
+	    double ymargin = (double)y/(100*qt_oversamplingF) + 0.75/qt_oversamplingF;
+	    qt->out << GETextBox << QPointF(xmargin, ymargin) << option;
+	} else
 	    qt->out << GETextBox << qt_termCoordF(x, y) << option;
 }
 #endif
