@@ -1,3 +1,8 @@
+2017-07-06  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/qtterminal/qt_term.cpp (qt_boxed_text):  Increase the textbox
+	y margin slightly to allow more space for descenders.
+
 2017-07-05  Daniel J Sebald <daniel.sebald@ieee.org>
 
 	* src/qtterminal/QtGnuplotScene.cpp:  Qt::Align{Foo} are bit
